# investment

./: .gitignore  ROE_SELECT.py  aaa.html  aaa.txt  bbb.py  calculation.html  code_list.txt  config.py  constant.py  data_day.py  data_weekly.py  dataframe.html  day.py  display_data.html  export.py  finance_data.py  history.html  history_valuation.html  index.html  index1.html  index_template.html  portfolio.html  portfolio_manager.py  position.html  pyproject.toml  roe_select.py  save_img.py  stock_data.json  stocks_data.html  styles.css  trend_graph.py  wechat.py  wx.py  代办.txt
PE_STD/: 2022_R15.csv  R15.csv  R15_20221028_std.csv  R15_20221031_std.csv  R15_20230214_std.csv  R15_20230224_std.csv  R15_20230225_std.csv  countPeStd.py  getFinanceData.py  getPeData.py  roeSelect.py
bak/: pyproject.toml
data/: 600519_data.pkl  HK00388_valuation.json  HK00700_valuation.json  HK09633_valuation.json  SH600036_valuation.json  SH600276_valuation.json  SH600309_valuation.json  SH600436_valuation.json  SH600519_valuation.json  SH600600_valuation.json  SH600660_valuation.json  SH600690_valuation.json  SH600887_valuation.json  SH603195_valuation.json  SH603259_valuation.json  SH603288_valuation.json  SH603444_valuation.json  SH603605_valuation.json  SH603899_valuation.json  SH605499_valuation.json  SZ000333_valuation.json  SZ000538_valuation.json  SZ000568_valuation.json  SZ000651_valuation.json  SZ000848_valuation.json  SZ000858_valuation.json  SZ000895_valuation.json  SZ000999_valuation.json  SZ002003_valuation.json  SZ002032_valuation.json  SZ002262_valuation.json  (+13 more)
(+1180 files in other folders)
