[tool.poetry]
name = "investment"
version = "0.1.0"
description = ""
authors = ["linuxyan <linuxcy@126.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
requests = "^2.28.2"
tushare = "^1.2.89"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
flake8-bugbear = "^22.7.1"
pre-commit = "^2.20.0"
isort = "^5.10.1"
types-python-dateutil = "^2.8.19"

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
