[tool.poetry]
name = "investment"
version = "0.1.0"
description = ""
authors = ["CaoYan <4221273+linuxyan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
akshare = "^1.14.1"
jinja2 = "^3.1.4"
retry = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
